# gimli

./: .gitlab-ci.yml  CMakeLists.txt  readme.md
.github/workflows/: alpine.yml  alpine_arm.yml  build-clang.yml  build-gcc.yml  clang.yml  gcc.yml  msys2.yml  sanitizer.yml
apps/: CMakeLists.txt  readme.md  return_codes.hpp  third-party.md  versions.cpp  versions.hpp
apps/gandalf_the_grey/: CMakeLists.txt  changelog.md  gandalf_the_grey.cbp  grey.cpp  grey.hpp  main.cpp  readme.md  return_codes.hpp
apps/gandalf_the_white/: CMakeLists.txt  changelog.md  gandalf_the_white.cbp  main.cpp  readme.md  white.cpp  white.hpp
apps/gimli/: CMakeLists.txt  changelog.md  gimli.cbp  likeness.cpp  likeness.hpp  main.cpp  readme.md
apps/hobbit/: CMakeLists.txt  changelog.md  hobbit.cbp  hobbit.cpp  hobbit.hpp  main.cpp  readme.md
apps/legolas/: CMakeLists.txt  changelog.md  legolas.cbp  legolas.cpp  legolas.hpp  main.cpp  readme.md
ci/: Dockerfile_boost_1_72  Dockerfile_boost_1_75  Dockerfile_coverage  Dockerfile_fedora  readme.md
documentation/: msys2-build.md
lib/: Image.hpp
lib/gimli/hash/: difference.hpp
lib/gimli/loaders/: Loader.hpp
lib/gimli/transforms/: Resize.hpp
lib/gimli/types/: get_type.cpp  get_type.hpp  is_jpeg.cpp  is_jpeg.hpp  is_png.cpp  is_png.hpp  is_targa.cpp  is_targa.hpp
lib/hash/: average.cpp  average.hpp  difference.cpp  difference.hpp  factory.hpp  minmax.cpp  minmax.hpp  similarity.hpp  stringify.hpp  vertical_difference.cpp  vertical_difference.hpp
lib/io/: BitmapLoader.hpp  BitmapWriter.hpp  JpegLoader.hpp  JpegWriter.hpp  Loader.hpp  PngLoader.hpp  PngWriter.hpp  TargaLoader.hpp  TargaWriter.hpp  WebpLoader.hpp  WebpWriter.hpp  Writer.hpp  load_any.cpp  load_any.hpp  write_any.cpp  write_any.hpp
lib/loaders/: Loader.hpp  load_any.hpp
lib/transforms/: Greyscale.cpp  Greyscale.hpp  Resize.hpp
lib/types/: get_type.cpp  get_type.hpp  is_bitmap.cpp  is_bitmap.hpp  is_jpeg.hpp  is_png.cpp  is_png.hpp  is_targa.cpp  is_targa.hpp  is_webp.cpp  is_webp.hpp
src/gimli/: Dimension.cpp  Dimension.hpp  Format.hpp  Image.cpp  Image.hpp
src/gimli/hash/: average.cpp  average.hpp  difference.cpp
src/gimli/loaders/: JpegLoader.cpp  JpegLoader.hpp  Loader.hpp  PngLoader.cpp  PngLoader.hpp
src/gimli/numeric/: hamming.cpp  hamming.hpp
src/gimli/transforms/: Greyscale.cpp  Greyscale.hpp
tests/: CMakeLists.txt
tests/apps/: CMakeLists.txt
tests/apps/gandalf_the_grey/: CMakeLists.txt  fail-to-load.sh  file-does-not-exist.sh  file-name-with-number.cmd  file-name-with-number.sh  file-type-undetermined.cmd  file-type-undetermined.sh  file-type-unknown.sh  no-arguments.sh  umlauts.cmd  umlauts.sh  unknown.blob  valid-file.cmd  valid-file.sh
tests/apps/gandalf_the_white/: CMakeLists.txt  fail-to-load.cmd  fail-to-load.sh  file-does-not-exist.cmd  file-name-with-number.cmd  file-name-with-number.sh  file-type-unknown.cmd  no-arguments.cmd  umlauts.cmd  umlauts.sh  valid-file.cmd  valid-file.sh
tests/apps/gimli/: CMakeLists.txt  duplicate-hash-algorithm.cmd  duplicate-hash-algorithm.sh  fail-to-load.cmd  fail-to-load.sh  file-does-not-exist.cmd  file-does-not-exist.sh  file-type-undetermined.cmd  file-type-undetermined.sh  file-type-unknown.cmd  file-type-unknown.sh  umlauts.cmd  umlauts.sh  valid-file.cmd  valid-file.sh
tests/apps/hobbit/: CMakeLists.txt  file-type-unknown.sh  size-fails-to-parse.sh  size-given-twice.sh
tests/apps/hobbit/functions/: CMakeLists.txt  hobbit_tests.cbp  main.cpp  parse_size.cpp
tests/apps/hobbit/scripts/: CMakeLists.txt  fail-to-load.cmd  fail-to-load.sh  file-does-not-exist.cmd  file-does-not-exist.sh  file-type-undetermined.cmd  file-type-undetermined.sh  file-type-unknown.cmd  file-type-unknown.sh  resize-fail.cmd  resize-fail.sh  size-but-no-numbers.cmd  size-but-no-numbers.sh  size-fails-to-parse.cmd  size-given-twice.cmd  size-not-specified.cmd  size-not-specified.sh  target-file-exists.cmd  target-file-exists.sh  umlauts.cmd  umlauts.sh  valid-file.cmd  valid-file.sh
tests/gimli/: CMakeLists.txt  Dimension.cpp  Image.cpp  find_catch.hpp  gimli-tests.cbp  main.cpp
tests/gimli/hash/: average.cpp  difference.cpp  factory.cpp  minmax.cpp  similarity.cpp  stringify.cpp  vertical_difference.cpp
tests/gimli/io/: BitmapLoader.cpp  JpegLoader.cpp  PngLoader.cpp  TargaLoader.cpp  WebpLoader.cpp  load_any.cpp  write_any.cpp
tests/gimli/loaders/: JpegLoader.cpp  PngLoader.cpp  TargaLoader.cpp  load_any.cpp
tests/gimli/numeric/: hamming.cpp
tests/gimli/transforms/: Greyscale.cpp  Resize.cpp
tests/gimli/types/: get_type.cpp  is_bitmap.cpp  is_jpeg.cpp  is_png.cpp  is_targa.cpp  is_webp.cpp
